fixed events date/time not saving updated events UI to match other pages updated favicon to have transparency updated logo linked footer logo to home fixed issue preventing users from joining more than one event added event unit tests

--- a/Sprint/Sprint/Views/Event/Details.cshtml
+++ b/Sprint/Sprint/Views/Event/Details.cshtml
@@ -7,10 +7,10 @@
     ViewData["Title"] = "Details";
 }
 
-<h1>Event Details</h1>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
 <div class="container">
-    <h4>@Model.Event.EventName</h4>
+    <h4 class="text-light font-weight-light text-uppercase"><i class="fa fa-calendar text-secondary pr-2" aria-hidden="true"></i> Event Details: @Model.Event.EventName</h4>
     <hr />
     <dl class="row">
         <dt class="col-sm-2">
