--- a/Sprint/Sprint/Views/Event/Edit.cshtml
+++ b/Sprint/Sprint/Views/Event/Edit.cshtml
@@ -4,19 +4,16 @@
     ViewData["Title"] = "Edit";
 }
 
-<h1>Edit</h1>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
-<h4>Event</h4>
+<h4 class="text-light font-weight-light text-uppercase"><i class="fa fa-calendar text-secondary pr-2" aria-hidden="true"></i> Edit: @Model.EventName</h4>
 <hr />
 <form asp-action="Edit">
     <div class="row">
         <div class="col-md-4">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="EventId" />
-            <div class="form-group">
-                <select asp-for="UserId" class="form-control" asp-items="ViewBag.UserId" hidden></select>
-                <span asp-validation-for="UserId" class="text-danger"></span>
-            </div>
+            <input type="hidden" asp-for="UserId" />
             <div class="form-group">
                 <label asp-for="EventName" class="control-label"></label>
                 <input asp-for="EventName" class="form-control" />
