--- a/Sprint/Sprint/Views/Shared/_Layout.cshtml
+++ b/Sprint/Sprint/Views/Shared/_Layout.cshtml
@@ -15,7 +15,7 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm moist-bg-light moist-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"><img src="~/image/moistLogo2.png" /></a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"><img src="~/image/moist2.png" style="padding-bottom: 5px;"/></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -61,9 +61,9 @@
     <footer class="border-top footer">
         <div class="container-fluid" style="text-align: center; color: #ffffff;">
             <div class="row">
-                <div class="col-4 footerLinks" style="padding-top: 10px;">&copy; 2020 Moist Gaming</div>
-                <div class="col-4 footerLinks" style="padding-bottom: 10px;"><img src="~/image/moistLogo2.png" /></div>
-                <div class="col-4 footerLinks" style="padding-top: 10px;">
+                <div class="col-4 footerLinks" style="padding-top: 20px;">&copy; 2020 Moist Gaming</div>
+                <div class="col-4 footerLinks" style="padding-bottom: 15px;"><a asp-area="" asp-controller="Home" asp-action="Index"><img src="~/image/moist2.png" /></a></div>
+                <div class="col-4 footerLinks" style="padding-top: 20px;">
                     <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
                 </div>
             </div>
