--- a/Sprint/Sprint/Views/Event/Create.cshtml
+++ b/Sprint/Sprint/Views/Event/Create.cshtml
@@ -4,17 +4,15 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
-<h4>Event</h4>
+<h4 class="text-light font-weight-light text-uppercase"><i class="fa fa-calendar text-secondary pr-2" aria-hidden="true"></i> Create Event</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <select asp-for="UserId" class ="form-control" asp-items="ViewBag.UserId" hidden></select>
-            </div>
+            <input type="hidden" asp-for="UserId" />
             <div class="form-group">
                 <label asp-for="EventName" class="control-label"></label>
                 <input asp-for="EventName" class="form-control" />
