--- a/Sprint/Sprint/Views/Event/Delete.cshtml
+++ b/Sprint/Sprint/Views/Event/Delete.cshtml
@@ -4,11 +4,10 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
-<h3>Are you sure you want to delete this?</h3>
+<h4 class="text-light font-weight-light text-uppercase"><i class="fa fa-calendar text-secondary pr-2" aria-hidden="true"></i> Delete @Model.EventName: Are you sure?</h4>
 <div>
-    <h4>Event</h4>
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
