--- a/Sprint/Sprint/Views/Game/Index.cshtml
+++ b/Sprint/Sprint/Views/Game/Index.cshtml
@@ -143,7 +143,7 @@
                                         <div class="d-flex justify-content-between">
                                             @if (SignInManager.IsSignedIn(User) && !item.IsOwned)
                                             {
-                                                <div class="btn-group hide mr-auto pl-2">
+                                                <div class="btn-group hide pl-2">
                                                     @if (item.IsWishlisted)
                                                     {
                                                         <form asp-route-gameId="@item.Game.GameId" asp-route-returnUrl="@Url.Action("Index", "Game")" asp-controller="Wishlist" asp-action="Remove">
@@ -178,7 +178,7 @@
                                             }
                                             @if (item.Discount != null && item.Game.RegularPrice != 0)
                                             {
-                                                <span class="moist-discount-percent shadow rounded">@string.Format("{0:0%}", item.Discount.DiscountPrice / item.Game.RegularPrice)</span>
+                                                <span class="moist-discount-percent shadow rounded ml-auto">@string.Format("{0:0%}", item.Discount.DiscountPrice / item.Game.RegularPrice)</span>
                                                 <div class="ml-2">
                                                     <span class="moist-discount-regular-price text-secondary">@item.Game.RegularPrice</span>
                                                     <span class="moist-discount-price text-dark">@item.Discount.DiscountPrice</span>
@@ -186,7 +186,7 @@
                                             }
                                             else if (item.Game.RegularPrice > 0)
                                             {
-                                                <h5 class="text-dark font-weight-bold mt-1 mb-0">@item.Game.RegularPrice</h5>
+                                                <h5 class="text-dark font-weight-bold mt-1 mb-0 ml-auto">@item.Game.RegularPrice</h5>
                                             }
                                         </div>
                                     </div>
