--- a/Sprint/Sprint/Views/Shared/_Layout.cshtml
+++ b/Sprint/Sprint/Views/Shared/_Layout.cshtml
@@ -13,9 +13,9 @@
 </head>
 <body>
     <header>
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm moist-bg-light moist-shadow mb-3">
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm moist-bg-light moist-shadow mb-3 p-0">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index"><img src="~/image/moist2.png" style="padding-bottom: 5px;"/></a>
+                <a class="navbar-brand p-1" asp-area="" asp-controller="Home" asp-action="Index"><img src="~/image/moist2.png"/></a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
