--- a/Sprint/Sprint/Views/Event/Create.cshtml
+++ b/Sprint/Sprint/Views/Event/Create.cshtml
@@ -12,7 +12,9 @@
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input type="hidden" asp-for="UserId" />
+            <div class="form-group">
+                <select asp-for="UserId" class="form-control" asp-items="ViewBag.UserId" hidden></select>
+            </div>
             <div class="form-group">
                 <label asp-for="EventName" class="control-label"></label>
                 <input asp-for="EventName" class="form-control" />
