--- a/Sprint/Sprint/Views/Event/Create.cshtml
+++ b/Sprint/Sprint/Views/Event/Create.cshtml
@@ -13,7 +13,7 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <select asp-for="UserId" class="form-control" asp-items="ViewBag.UserId" hidden></select>
+                @Html.Hidden("UserId", (object)ViewBag.UserId)
             </div>
             <div class="form-group">
                 <label asp-for="EventName" class="control-label"></label>
